# wikiproxy

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  wikiproxy.py
wikiproxy/: __init__.py  __main__.py  routers.py  wiki.py
