[project]
name = "wikiproxy"
dynamic = ["version"]
description = "A FutureRestore-compatible firmware key API."
authors = [
    {name = "m1stadev", email = "adamhamdi31@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.7",
    "uvicorn>=0.30.1",
    "aiohttp>=3.9.5",
    "fastapi>=0.111.0",
    "wikitextparser>=0.56.0"
    
]

[project.urls]
Repository = "https://github.com/m1stadev/wikiproxy"
"Bug Tracker" = "https://github.com/m1stadev/wikiproxy/issues"

[project.scripts]
wikiproxy = "wikiproxy.__main__:main"

[project.optional-dependencies]
m1sta = [
    "gunicorn>=22.0.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.poetry-dynamic-versioning]
vcs = "git"
style = "semver"
dirty = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E722"]

[tool.ruff.format]
quote-style = "single"
